Updated notebook image to one that can be found.

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": "numpy"
+  "name": "",
+  "signature": "sha256:9d09b9ef92f35064f532a0ce04fff44eb37e7bb3853e3ab32a78a1ce893c4b75"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -222,6 +223,7 @@
      "metadata": {},
      "outputs": [
       {
+       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 3,
        "text": [
@@ -257,7 +259,7 @@
      "source": [
       "Unlike Python lists, NumPy arrays are homogeneous: all values must have exactly the same type. This allows values to be packed together as shown here, which saves memory and is much faster to process.\n",
       "\n",
-      "<img src=\"http://software-carpentry.org/5_0/img/numpy/list-vs-array.png\" />\n",
+      "<img src=\"https://raw.githubusercontent.com/embray/notebooks/master/images/list-vs-array.png\" />\n",
       "\n",
       "If we give NumPy initial values of different types, it finds the most general type and stores all the values in the array using that type. For example, if we construct an array from an integer and a float, the array's values are both floats: "
      ]
@@ -274,6 +276,7 @@
      "metadata": {},
      "outputs": [
       {
+       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 5,
        "text": [
@@ -392,6 +395,7 @@
      "metadata": {},
      "outputs": [
       {
+       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 6,
        "text": [
@@ -1150,6 +1154,7 @@
      "metadata": {},
      "outputs": [
       {
+       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 25,
        "text": [
@@ -1200,6 +1205,7 @@
      "metadata": {},
      "outputs": [
       {
+       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 29,
        "text": [
@@ -1227,6 +1233,7 @@
      "metadata": {},
      "outputs": [
       {
+       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 30,
        "text": [
@@ -1310,6 +1317,7 @@
      "metadata": {},
      "outputs": [
       {
+       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 34,
        "text": [
@@ -1392,6 +1400,7 @@
      "metadata": {},
      "outputs": [
       {
+       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 36,
        "text": [
@@ -1412,6 +1421,7 @@
      "metadata": {},
      "outputs": [
       {
+       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 37,
        "text": [
@@ -1506,6 +1516,7 @@
      "metadata": {},
      "outputs": [
       {
+       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 39,
        "text": [
@@ -1602,6 +1613,7 @@
      "metadata": {},
      "outputs": [
       {
+       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 42,
        "text": [
@@ -1681,6 +1693,7 @@
      "metadata": {},
      "outputs": [
       {
+       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 43,
        "text": [
@@ -1701,6 +1714,7 @@
      "metadata": {},
      "outputs": [
       {
+       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 44,
        "text": [
