Updated this image as well

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:9d09b9ef92f35064f532a0ce04fff44eb37e7bb3853e3ab32a78a1ce893c4b75"
+  "signature": "sha256:9536349ac715fbc79efcf04916b773d7c6941e29fc35f64628a34338b9f4807e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -172,7 +172,7 @@
      "source": [
       "### More human-friendly interfaces to numerical libraries\n",
       "\n",
-      "<img src=\"http://software-carpentry.org/5_0/img/numpy/caxpy.png\" />"
+      "<img src=\"https://raw.githubusercontent.com/embray/notebooks/master/images/caxpy.png\" />"
      ]
     },
     {
