Adds several more previously broken images

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:9536349ac715fbc79efcf04916b773d7c6941e29fc35f64628a34338b9f4807e"
+  "signature": "sha256:83c24e5b5fcb4629f15c16bc0e539d5a85fa163c5c0c137c3c330d0657e95636"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -782,15 +782,15 @@
      "source": [
       "What order do raveled values appear in? Let's start by thinking about a 2\u00d74 array `A`. It looks two-dimensional, but the computer's memory is 1-dimensional: each location is identified by a single integer address. Any program that works with multi-dimensional data must therefore decide how to lay out those values. \n",
       "\n",
-      "<img src=\"http://software-carpentry.org/5_0/img/numpy/logical-layout.png\" />\n",
+      "<img src=\"https://raw.githubusercontent.com/embray/notebooks/master/images/logical-layout.png\" />\n",
       "\n",
       "One possibility is *row-major order*, which concatenates the rows. This is what C uses, and since Python was originally written in C, it uses the same convention: \n",
       "\n",
-      "<img src=\"http://software-carpentry.org/5_0/img/numpy/row-major-layout.png\" />\n",
+      "<img src=\"https://raw.githubusercontent.com/embray/notebooks/master/images/row-major-layout.png\" />\n",
       "\n",
       "In contrast, column-major order concatenates the columns. Fortran does this, and MATLAB follows along.\n",
       "\n",
-      "<img src=\"http://software-carpentry.org/5_0/img/numpy/column-major-layout.png\" />\n",
+      "<img src=\"https://raw.githubusercontent.com/embray/notebooks/master/images/column-major-layout.png\" />\n",
       "\n",
       "There's no real difference in performance or usability, but the differences cause headaches when data has to be moved from one programming language to another. For example, if your Python code wants to call an eigenvalue function written in Fortran, you will probably have to rearrange the data, just as you have to be careful about 0-based versus 1-based indexing. Note that you cannot use the array's `transpose` method to do this, since, as explained earlier, it doesn't actually move data around.\n",
       "\n",
@@ -914,7 +914,7 @@
       "\n",
       "Arrays are subscripted by integers, just like lists and other sequences, so they can be sliced like other sequences as well. For example, if `block` is the array shown below, then `block[0:3, 0:2]` selects its first three rows and the first two columns: \n",
       "\n",
-      "<img src=\"http://software-carpentry.org/5_0/img/numpy/slice-2d.png\" />\n",
+      "<img src=\"https://raw.githubusercontent.com/embray/notebooks/master/images/slice-2d.png\" />\n",
       "\n",
       "The comma syntax (`[X, Y]`) for indexing multi-dimensional arrays was lobbied for and eventually added to the Python language by the scientific community.  Although it is possible to `block[0:3][0:2]` this is comparatively inefficient, especially when doing many array indexing operations. (Why?)"
      ]
@@ -1024,7 +1024,7 @@
      "source": [
       "We co do even more sophisticated things by using a list or an array as a subscript. For example, if `subscript` is a list containing 3, 1, and 2, then `vector[subscript]` creates a new array whose elements are selected from vector in the obvious way: \n",
       "\n",
-      "<img src=\"http://software-carpentry.org/5_0/img/numpy/list-subscript.png\" />"
+      "<img src=\"https://raw.githubusercontent.com/embray/notebooks/master/images/list-subscript.png\" />"
      ]
     },
     {
@@ -1120,7 +1120,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<img src=\"http://software-carpentry.org/5_0/img/numpy/mask-assignment-to.png\" />"
+      "<img src=\"https://raw.githubusercontent.com/embray/notebooks/master/images/mask-assignment-to.png\" />"
      ]
     },
     {
