Clarified further that bash-only commands might work, but aren't guaranteed.

--- a/simcluster-windows.ipynb
+++ b/simcluster-windows.ipynb
@@ -119,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Note for Windows:** Much of what follows in this section only works on UNIX-like shells such as on Linux or Windows.  If you have a port of the Bash shell for Windows, such as Git Bash, and are running IPython from that shell these commands may work.  But in general, concepts discussed below like the \"shebang\" line and executable files do not apply on Windows.\n",
+    "**Note for Windows:** Much of what follows in this section only works on UNIX-like shells such as on Linux or Windows.  If you have a port of the Bash shell for Windows, such as Git Bash, and are running IPython from that shell these commands *might* work, but it depends largely on how your system is configured.  But in general, concepts discussed below like the \"shebang\" line and executable files do not apply on Windows.\n",
     "\n",
     "For portability between OS's it is strongly recommended to use a Bash shell on Windows too."
    ]
