Fixed some typos in the final example

--- a/simcluster-windows.ipynb
+++ b/simcluster-windows.ipynb
@@ -1818,7 +1818,8 @@
     "}\n",
     "\n",
     "\n",
-    "def simulated_cluster(n_stars=CLUTER_DEFAULTS['stars'], dimensions=CLUSTER_DEFAULTS['dimension']):\n",
+    "def simulated_cluster(n_stars=CLUSTER_DEFAULTS['stars'],\n",
+    "                      dimensions=CLUSTER_DEFAULTS['dimensions']):\n",
     "    \"\"\"\n",
     "    Generates an image simulating a cluster of stars, including\n",
     "    a Gaussian filter and background noise.\n",
