Fix remaining example that used astropy

--- a/simcluster-windows.ipynb
+++ b/simcluster-windows.ipynb
@@ -1863,8 +1863,7 @@
     "            image[y[idx], x[idx]] += fluxes[idx]\n",
     "\n",
     "    # Convolve with a gaussian\n",
-    "    kernel = Gaussian2DKernel(stddev=1)\n",
-    "    image = convolve_fft(image, kernel)\n",
+    "    image = gaussian_filter(image, sigma=1)\n",
     "\n",
     "    # Add noise\n",
     "    image += np.random.normal(1., 0.001, image.shape)\n",
